# time-decomp

./: README.md  test_plotly.ipynb
.github/workflows/: python-publish.yml
Python/: README.md  pyproject.toml
Python/src/time_decomp/: decomposition.py  environmentaltrends.py
Python/tests/: decomposition_test.py  env_trends_test.py  keew_decomp_test.py
