[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "time-decomp"
version = "1.2.2"
authors = [
  { name="AcaciaMan", email="11488694+AcaciaMan@users.noreply.github.com" },
]
description = "Time series decomposition plot trend and seasonality together"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/AcaciaMan/time-decomp"
Issues = "https://github.com/AcaciaMan/time-decomp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/time_decomp"]
